<resources>
    <string name="app_name">Parallax</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">ruqqus.com</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_ruqqus_feeds">Ruqqus feeds</string>
    <string name="menu_guilds">Guilds</string>
    <string name="menu_home">Home</string>
    <string name="menu_trending">Trending</string>
    <string name="menu_all">All</string>
    <string name="menu_user">User</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_inbox">Inbox</string>
    <string name="nav_prefs">Preferences</string>

    <string name="alt_post_thumbnail">Post thumbnail</string>
    <string name="alt_guild_icon">Guild icon</string>

    <string name="placeholder_guild">[Guild]</string>
    <string name="placeholder_time_ago">[Time Ago]</string>
    <string name="placeholder_author">[Author]</string>
    <string name="placeholder_title">[Title]</string>
    <string name="placeholder_upvotes">[Upvotes]</string>
    <string name="placeholder_comments">[Comments]</string>
    <string name="comments">comments</string>
</resources>