<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="me.kolpa.parallax.ui.feed.FeedFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home">
        <deepLink
                android:id="@+id/deepLink"
                app:uri="https://ruqqus.com" />
    </fragment>
    <fragment
            android:id="@+id/nav_trending"
            android:name="me.kolpa.parallax.ui.feed.FeedFragment"
            android:label="@string/menu_trending">
        <deepLink
                android:id="@+id/deepLink3"
                app:uri="https://ruqqus.com/all?sort=new" />
    </fragment>

    <fragment
            android:id="@+id/nav_all"
            android:name="me.kolpa.parallax.ui.feed.FeedFragment"
            android:label="@string/menu_all">
        <deepLink
                android:id="@+id/deepLink2"
                app:uri="https://ruqqus.com/all?sort=new" />
    </fragment>

</navigation>